# Rust_lab_4

./: Cargo.toml  identifier.sqlite
src/: main.rs
